cdk.out/vpc-stack.template.json
{
 "Resources": {
  "TransendenceVpcAA9C514B": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "Transendence-Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/Resource"
   }
  },
  "TransendenceVpcPublicSubnet1SubnetF30EB539": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "vpc-stack/Transendence-Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "TransendenceVpcAA9C514B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PublicSubnet1/Subnet"
   }
  },
  "TransendenceVpcPublicSubnet1RouteTableEC88DB55": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-stack/Transendence-Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "TransendenceVpcAA9C514B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PublicSubnet1/RouteTable"
   }
  },
  "TransendenceVpcPublicSubnet1RouteTableAssociationF26F0341": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "TransendenceVpcPublicSubnet1RouteTableEC88DB55"
    },
    "SubnetId": {
     "Ref": "TransendenceVpcPublicSubnet1SubnetF30EB539"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "TransendenceVpcPublicSubnet1DefaultRoute58038E5C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "TransendenceVpcIGW77EB0AC9"
    },
    "RouteTableId": {
     "Ref": "TransendenceVpcPublicSubnet1RouteTableEC88DB55"
    }
   },
   "DependsOn": [
    "TransendenceVpcVPCGW41E18250"
   ],
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "TransendenceVpcPublicSubnet2SubnetF633D1CE": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "vpc-stack/Transendence-Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "TransendenceVpcAA9C514B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PublicSubnet2/Subnet"
   }
  },
  "TransendenceVpcPublicSubnet2RouteTableB915EB6C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-stack/Transendence-Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "TransendenceVpcAA9C514B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PublicSubnet2/RouteTable"
   }
  },
  "TransendenceVpcPublicSubnet2RouteTableAssociation76485693": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "TransendenceVpcPublicSubnet2RouteTableB915EB6C"
    },
    "SubnetId": {
     "Ref": "TransendenceVpcPublicSubnet2SubnetF633D1CE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "TransendenceVpcPublicSubnet2DefaultRoute8206BBDD": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "TransendenceVpcIGW77EB0AC9"
    },
    "RouteTableId": {
     "Ref": "TransendenceVpcPublicSubnet2RouteTableB915EB6C"
    }
   },
   "DependsOn": [
    "TransendenceVpcVPCGW41E18250"
   ],
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "TransendenceVpcPrivateSubnet1SubnetB31E9A0E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "vpc-stack/Transendence-Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "TransendenceVpcAA9C514B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PrivateSubnet1/Subnet"
   }
  },
  "TransendenceVpcPrivateSubnet1RouteTableC18780A1": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-stack/Transendence-Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "TransendenceVpcAA9C514B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PrivateSubnet1/RouteTable"
   }
  },
  "TransendenceVpcPrivateSubnet1RouteTableAssociation581E12EE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "TransendenceVpcPrivateSubnet1RouteTableC18780A1"
    },
    "SubnetId": {
     "Ref": "TransendenceVpcPrivateSubnet1SubnetB31E9A0E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "TransendenceVpcPrivateSubnet2Subnet979E43CA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "vpc-stack/Transendence-Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "TransendenceVpcAA9C514B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PrivateSubnet2/Subnet"
   }
  },
  "TransendenceVpcPrivateSubnet2RouteTableAF29A544": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-stack/Transendence-Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "TransendenceVpcAA9C514B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PrivateSubnet2/RouteTable"
   }
  },
  "TransendenceVpcPrivateSubnet2RouteTableAssociation5F10E8F8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "TransendenceVpcPrivateSubnet2RouteTableAF29A544"
    },
    "SubnetId": {
     "Ref": "TransendenceVpcPrivateSubnet2Subnet979E43CA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "TransendenceVpcIGW77EB0AC9": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "Transendence-Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/IGW"
   }
  },
  "TransendenceVpcVPCGW41E18250": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "TransendenceVpcIGW77EB0AC9"
    },
    "VpcId": {
     "Ref": "TransendenceVpcAA9C514B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/Transendence-Vpc/VPCGW"
   }
  },
  "transendencevpcid80093447": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Name": "/transendence/vpc-id",
    "Type": "String",
    "Value": {
     "Ref": "TransendenceVpcAA9C514B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/transendence-vpc-id/Resource"
   }
  },
  "transendencepublicsubnet1579E5B95": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Name": "/transendence/public-subnet-1",
    "Type": "String",
    "Value": {
     "Ref": "TransendenceVpcPublicSubnet1SubnetF30EB539"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/transendence-public-subnet-1/Resource"
   }
  },
  "transendencepublicsubnet2F5D9C6AF": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Name": "/transendence/public-subnet-2",
    "Type": "String",
    "Value": {
     "Ref": "TransendenceVpcPublicSubnet2SubnetF633D1CE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/transendence-public-subnet-2/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/+1UTW/bMAz9LdVxULzOBXrILXOBzsDWGkmRw4ygoGUm0WJLgkQ58wz/98FfybCitwDLYSdRT49PTwTFMAhvw+D2Bo5uJvLDrJBZ0KwIxIHD0b02KMKgWRuRNgwVZAU+KPdFO1JQomNzsh75+WTljdGWJlyaRZ5bdK6jsg+MsxJ+Ln5NGwX0CIRHqCfEoiMrBT3gFnxBKxTeSqofrfaGzbdQOOTM+UwhRVpt5c5bIKkVm6cN6yyNOgPlpTYdkPiskIJxJmRuv4E79KSWv58RO10AYf4mZ8NZZcTTlNZueLRV6yTiwx2rXiRtGFQgC8hkIan+rtV0SWVEnI9xJ/y50OJwqowZRGLzrL6CV2J/LmN1H/1FB+fkTsWmuh9L/Kwii2MxxuddhYurMXIdLoaWGRqli5baE7503+eMn7GFc1rIXuBE5omVFRBevNnG7/Wvy/vfxqVs9 [...]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
